--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.24.3
-opencv-python==4.8.0
-Pillow==10.0.0
-scikit-image==0.21.0
-scipy==1.11.2
-Flask==2.3.3
-Flask-CORS==4.0.0
-python-dotenv==1.0.0
-PyWavelets==1.4.1
+numpy>=1.26.0
+opencv-python>=4.8.1
+Pillow>=10.1.0
+scikit-image>=0.22.0
+scipy>=1.11.3
+Flask>=2.3.3
+Flask-CORS>=4.0.0
+python-dotenv>=1.0.0
+PyWavelets>=1.5.0
