--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-tabs": "^6.0.2"
+    "react-tabs": "^6.0.2",
+    "tailwind-scrollbar": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
