--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^7.4.1",
     "react-tabs": "^6.0.2",
     "tailwind-scrollbar": "^4.0.1"
