--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,62 @@ Flask>=2.3.3
 Flask-CORS>=4.0.0
 python-dotenv>=1.0.0
 PyWavelets>=1.5.0
+annotated-types==0.7.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+flask-cors==5.0.1
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.165.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+httplib2==0.22.0
+idna==3.10
+imageio==2.37.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+lazy_loader==0.4
+llvmlite==0.44.0
+MarkupSafe==3.0.2
+networkx==3.4.2
+numba==0.61.0
+numpy==2.1.3
+opencv-python-headless==4.11.0.86
+packaging==24.2
+pillow==11.1.0
+platformdirs==4.3.7
+pooch==1.8.2
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+PyMatting==1.1.13
+pyparsing==3.2.1
+python-dotenv==1.0.1
+referencing==0.36.2
+rembg==2.0.65
+requests==2.32.3
+rpds-py==0.24.0
+rsa==4.9
+scikit-image==0.25.2
+scipy==1.15.2
+tifffile==2025.3.13
+tqdm==4.67.1
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+Werkzeug==3.1.3
