--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -21,10 +20,12 @@
     "react-image-crop": "^11.0.7",
     "react-router-dom": "^7.4.1",
     "react-tabs": "^6.0.2",
-    "tailwind-scrollbar": "^4.0.1"
+    "tailwind-scrollbar": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/postcss": "^4.0.17",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -34,7 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
