--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
